# Annotated

./: CMakeLists.txt  Modified Google C++ Style Guide.html
Tests/: CMakeLists.txt  hello_test.cpp
UI/: uimain.cpp  uimain.h  uimain.ui
Utilities/: sample_class.cpp
